Fixed some css; Now auto closed sidebar on mobile.

--- a/static/css/lanyon.css
+++ b/static/css/lanyon.css
@@ -11,27 +11,8 @@
  *
  * Designed, built, and released under MIT license by @mdo. Learn more at
  * https://github.com/poole/lanyon.
- */
-
-
-/*
- * Contents
  *
- * Global resets
- * Masthead
- * Sidebar
- * Slide effect
- * Posts and pages
- * Pagination
- * Reverse layout
- * Themes
- */
-
-
-/*
- * Global resets
- *
- * Update the foundational and global aspects of the page.
+ * Heavily modified for the usage of modoocode.com
  */
 
 /* Prevent scroll on narrow devices */
@@ -137,11 +118,22 @@ h1, h2, h3, h4, h5, h6 {
 
 .wrap {
   position: relative;
-  width: 70%;
-  margin-left:30%;
+  width: 100%;
+  margin-left:0%;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 634px) {
+  .sidebar {
+    display: none;
+    width: 50%;
+  }
+
+  .wrap {
+    width: 100%;
+  }
+}
+
+@media (min-width: 635px) and (max-width: 767px) {
   .sidebar {
     width: 30%;
   }
